--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <nav class="navbar">
       <div class="nav-logo">Global Academy Alliance</div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="https://zhuldyz0880-star.github.io/GAAdupe/">Home</a></li>
+        <li><a href="https://zhuldyz0880-star.github.io/GAAdupe/about">About</a></li>
         <li><a href="#">Apply</a></li>
       </ul>
     </nav>
 
     <!-- Background Image Section -->
-    <div class="background-img1">
-      <br>
-      <h1>Giving the gift of education, one student at a time.</h1>
-    </div>
+    <div class="background-img1"></div>
+    <h1>Giving the gift of education, one student at a time.</h1>
+
 <br>
 <br>
     <div>
