--- a/about.html
+++ b/about.html
@@ -15,15 +15,18 @@
       </ul>
     </nav>
 
-    <nav> <!-- Info Slides-->
-      <img src="images/AboutSlide1.png">
+    <div> <!-- Info Slides-->
+      <img class="rounded-img" src="images/AboutSlide1.png">
+      <br>
       <br>
       <img src="images/AboutSlide2.png">
       <br>
+      <br>
       <img src="images/AboutSlide3.png">
       <br>
+      <br>
       <img src="images/AboutSlide4.png">
-    </nav>
+    </div>
 
   </body>
 </html>
