--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
       <img class="rounded-img" src="images/AboutSlide1.png">
       <br>
       <br>
-      <img src="images/AboutSlide2.png">
+      <img class="rounded-img" src="images/AboutSlide2.png">
       <br>
       <br>
-      <img src="images/AboutSlide3.png">
+      <img class="rounded-img" src="images/AboutSlide3.png">
       <br>
       <br>
-      <img src="images/AboutSlide4.png">
+      <img class="rounded-img" src="images/AboutSlide4.png">
     </div>
 
   </body>
