--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       </ul>
     </nav>
 
-    <div> <!-- Info Slides-->
+    <div class="mXdiv"> <!-- Info Slides-->
       <img class="rounded-img" src="images/AboutSlide1.png">
       <br>
       <br>
