--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Global Academy Alliance</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -17,13 +18,14 @@
 
     <!-- Background Image Section -->
     <div class="background-img1"></div>
-    <h1>Giving the gift of education, one student at a time.</h1>
+    <h1>Changing lives one step at a time.</h1>
+    <a href="https://zhuldyz0880-star.github.io/GAAdupe/home" class="cta-button">Apply to GAA Now</a>
 
 <br>
 <br>
     <div>
       <h1>Our Mission</h1>
-      <p>Our mission is to make sure every student will be able to get educated <br> where <i>they want to be</i>. We achive this by partnering with multiple schools across the world <br> which students can select from to get educated at.</p>
+      <p>Our mission is to make sure every student will be able to get educated <br> where <i>they want to be</i>. We achieve this by partnering with multiple schools across the world <br> which students can select from to get educated at.</p>
     </div>
   </body>
 </html>
